--- a/fun/MainWindow.xaml
+++ b/fun/MainWindow.xaml
@@ -2,12 +2,10 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:oxy="http://oxyplot.org/wpf"
-        xmlns:sys="clr-namespace:System;assembly=mscorlib" 
+        xmlns:sys="clr-namespace:System;assembly=mscorlib"
         xmlns:lvc="clr-namespace:LiveCharts.Wpf;assembly=LiveCharts.Wpf"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:fun"
-        xmlns:col="clr-namespace:System.Collections;assembly=mscorlib"
         mc:Ignorable="d"
         Title="MainWindow" Height="1050" Width="1980">
     <Window.DataContext>
@@ -34,7 +32,8 @@
 
     </Window.Resources>-->
     <!--ShowGridLines="True"-->
-    <Grid ShowGridLines="True">
+    <Grid ><!--ShowGridLines="True"-->
+        
         <Grid.RowDefinitions>
             <RowDefinition Height="35 px"></RowDefinition>
             <RowDefinition Height="35 px"></RowDefinition>
@@ -51,6 +50,13 @@
         <Menu Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3" >
             <MenuItem Header="    File    " Height="35" >
                 <MenuItem Header="example"  Click="EX_Click"></MenuItem>
+            </MenuItem>
+            <MenuItem Header="    Metods    " Height="35" >
+                <StackPanel x:Name="stackPanel">
+                    <RadioButton x:Name="a1" GroupName="Meth" Content="Явний метод Ейлера"  IsChecked="True"/> <!--IsChecked="True"-->
+                    <RadioButton x:Name="a2" GroupName="Meth" Content="Неявний метод Ейлера" />
+                    <RadioButton x:Name="a3" GroupName="Meth" Content="Модифікований метод Ейлера" />
+                </StackPanel>
             </MenuItem>
         </Menu>
         <Grid Grid.Row="1" Grid.Column="0">
@@ -199,7 +205,7 @@
             </DataGrid>
         </Grid>
         <Grid Grid.Row="5" Grid.Column="2" >
-            <lvc:CartesianChart Grid.Row="2" Series="{Binding SeriesCollection}" LegendLocation="Right"></lvc:CartesianChart>
+            <lvc:CartesianChart Series="{Binding SeriesCollection}" LegendLocation="Right"  ></lvc:CartesianChart>
         </Grid>
     </Grid>
 </Window>
